Created the ambulance simulator